--- a/MathClient/MathClient.csproj
+++ b/MathClient/MathClient.csproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BotBuilderMock\BotBuilderMock.csproj" />
     <ProjectReference Include="..\Math\Math.csproj" />
+    <PackageReference Include="protobuf-net" Version="3.1.22" />
+    <PackageReference Include="protobuf-net.Core" Version="3.1.22" />
   </ItemGroup>
 
 </Project>
